--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <table id="more-about-me">
               <tr>
                 <th>Have you any programming or web design experience?</th>
-                <td>_</td>
+                <td>Yes, a little bit in web dev (javascript and java basics - currently making my way through a full-stack <a href="https://www.udemy.com/the-web-developer-bootcamp/learn/v4/overview" target="_blank">udemy course</a>). I enjoy curating pages and creative direction. I'm also interested in social media marketing and algorithms.</td>
               </tr>
               <tr>
                 <th>Do you see yourself as a programmer or designer, or both?</th>
