--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
             <table id="more-about-me">
               <tr>
                 <th>Have you any programming or web design experience?</th>
-                <td>Yes, a little bit in web dev (javascript and java basics - currently making my way through a full-stack <a href="https://www.udemy.com/the-web-developer-bootcamp/learn/v4/overview" target="_blank">udemy course</a>). I enjoy curating pages and creative direction. I'm also interested in social media marketing and algorithms.</td>
+                <td>Yes, a little bit in web dev (javascript and java basics - currently making my way through a full-stack <a href="https://www.udemy.com/the-web-developer-bootcamp/learn/v4/overview" target="_blank">udemy course</a>). I enjoy curating pages and creative direction. I'm also interested in social media marketing and algorithms.
+                </td>
               </tr>
               <tr>
                 <th>Do you see yourself as a programmer or designer, or both?</th>
-                <td>_</td>
+                <td>Definitely both, I froth over creative X tech projects like <a href="https://pitch-studios.com/NIKE-AIR-PROJECTIONS" target="_blank">THIS ONE!</a> . &hearts;
+                </td>
               </tr>
               <tr>
                 <th>What has brought you to this course at RMIT?</th>
