--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
               </tr>
               <tr>
                 <th>What has brought you to this course at RMIT?</th>
-                <td>_</td>
+                <td>Interdisciplinary possibilities, plus I get bored easily and have itchy feet (which you'll probably gather from my university transcript haha).
+                </td>
               </tr>
               <tr>
                 <th>What are you hoping to get out of the course?</th>
