--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               </tr>
               <tr>
                 <th>What are you hoping to get out of the course?</th>
-                <td>_</td>
+                <td>Employment as a Junior Web Developer to upskill, fund my yoga training course in India, and organise a women's (mainly for my friends) Bootcamp sometime in December 2018.</td>
               </tr>
               <tr>
                 <th>Assignments allow for individual or paried work. What strengths do you have and what strengths would you like your assignment partner to have?</th>
