--- a/index.html
+++ b/index.html
@@ -65,10 +65,6 @@
                     </tr>
                     <tr>
                         <th>Assignments allow for individual or paried work. What strengths do you have and what strengths would you like your assignment partner to have?</th>
-                        <td>_</td>
-                    </tr>
-                    <tr>
-                        <th>What websites do you use the most? (NB: "family friendly" !)</th>
                         <td>
                             <ul>
                                 <li>Organisation/ Project Management</li>
@@ -81,6 +77,22 @@
                                 <li>Dedicated</li>
                                 <li>Ambitious</li>
                             </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>What websites do you use the most? (NB: "family friendly" !)</th>
+                        <td>
+                            <ol>
+                                <li><a href="https://trello.com/" target="_blank">Trello</a></li>
+                                <li><a href="https://www.google.com.au/drive/" target="_blank">Google Drive</a></li>
+                                <li><a href="https://rmit.instructure.com/" target="_blank">Canvas </a></li>
+                                <li><a href="https://www.udemy.com/" target="_blank">Udemy</a></li>
+                                <li><a href="https://medium.com/" target="_blank">Medium</a></li>
+                                <li><a href="https://www.google.com/maps/" target="_blank">Google Maps</a></li>
+                                <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
+                                <li><a href="https://www.youtube.com/" target="_blank">YouTube</a></li>
+                                <li><a href="https://www.my.commbank.com.au/netbank/Logon/Logon.aspx" target="_blank">NetBank</a></li>
+                            </ol>
                         </td>
                     </tr>
                     <tr>
