--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
                     </tr>
                     <tr>
                         <th>Do you have any interests or hobbies?</th>
-                        <td>_</td>
+                        <td>Reading (especially about philosophy &amp; wellbeing), gym/yoga, writing, art, photography, culture, food, cooking, nutrition, technology, content creation (if that’s a hobby…)
+                        </td>
                     </tr>
                 </table>
             </details>
