Edited footed and put in relevant links and desired characters

--- a/index.html
+++ b/index.html
@@ -108,10 +108,13 @@
     </main>
 
     <footer>
-        &copy; Insert your name here
+        &copy; Zaadie Fourie
         <script>
             document.write(new Date().getFullYear());
-        </script>. Put footer info and other <a href=' '>secondary links</a> here (but only if you wish to). <button id='toggleWireframeCSS' onclick='toggleWireframe()'>Toggle Wireframe CSS</button>
+        </script>.
+        <a href='https://github.com/s3723996'>GitHub</a> &#9734;
+        <a href='https://medium.com/@zaadie'>Medium</a> &#9734;
+        <a href='https://instagram.com/_zaadie'>Instagram</a><button id='toggleWireframeCSS' onclick='toggleWireframe()'>Toggle Wireframe CSS</button>
     </footer>
 
 </body>
