changed the loction of my personal png image because acces to my media folder on the server  was denied

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <header>
         <!-- Image sourced from www.rmit.edu.au for educational purposes only -->
-        <div><img src='../media/RMIT-Logo.png' alt='RMIT University logo' height=80 />￼// ZAADIE FOURIE \\
+        <div><img src='../webprog.png' alt='RMIT University logo' height=80 />￼// ZAADIE FOURIE \\
         </div>
     </header>
 
