--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a href="/~e54061/wp/lectures" target="_blank">Lectures 0 - 11</a> |
         <a href="/~e54061/secure" target="_blank">Secure Resources Area</a> |
         <!-- link location: absolute -->
-        <a href='' target="_blank">WP Public</a>
+        <a href='https://drive.google.com/drive/u/4/folders/1m39LF9WZdfVRENiELsCA5IL5Fh0KGeGC' target="_blank">WP Public</a>
     </nav>
 
     <main>
