Updated nav links

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <li><a href="a3/index.php" target="_blank">A3</a></li>
         </ul> |
         <!-- link locations: relative to e54061's root web directory -->
-        <a href="/~e54061/wp/lectures" target="_blank">Lectures 0 - 11</a> |
-        <a href="/~e54061/secure" target="_blank">Secure Resources Area</a> |
+        <a href="https://titan.csit.rmit.edu.au/~e54061/wp/lectures/" target="_blank">Lectures 0 - 11</a> |
+        <a href="https://titan.csit.rmit.edu.au/~e54061/secure" target="_blank">Secure Resources Area</a> |
         <!-- link location: absolute -->
         <a href='https://drive.google.com/drive/u/4/folders/1m39LF9WZdfVRENiELsCA5IL5Fh0KGeGC' target="_blank">WP Public</a>
     </nav>
