Layout index.html editing

--- a/a2/index.html
+++ b/a2/index.html
@@ -8,16 +8,41 @@
 </head>
 
 <body>
-    <ul>
+<div id="navbar">
+      <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="">Content</a></li>
         <li><a href="">Store</a></li>
     </ul>
+</div>
+
+
 <div id="heading">
     <h1>NERDG3RL</h1>
 </div>
-<hr>
 
- </body>
+<hr>
+<div id="boxlinks">
+
+    <div id="box1" class="boxstyle">
+        <a href="" class="boxcontent">
+        <h2 class="boxcontent">Newsletter Sign-Up</h2>
+        </a>
+    </div>
+    <div id="box2" class="boxstyle ">
+        <a href="" class="boxcontent">
+        <h2 class="boxcontent">ARTICLE</h2>
+        </a>
+    </div>
+    <div id="box4" class="boxstyle">
+        <img src="media/noface.png">
+    </div>
+    <div id="box3" class="boxstyle">
+        <h2 class="boxcontent"> 'Anything is possible'</h2>
+    </div>
+</div>
+
+
+</body>
 
 </html>
