Home Page HTML5 & CSS Base Completed

--- a/a2/index.html
+++ b/a2/index.html
@@ -10,9 +10,10 @@
 <body>
 <div id="navbar">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="">Content</a></li>
-        <li><a href="">Store</a></li>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="">CONTENT</a></li>
+        <li><a href="">STORE</a></li>
+        <li id="nav-login"><a href="">LOGIN</a></li>
     </ul>
 </div>
 
@@ -22,7 +23,12 @@
 </div>
 
 <hr>
+
 <div id="boxlinks">
+<!--
+    <div class="space">
+    </div>
+-->
 
     <div id="box1" class="boxstyle">
         <a href="" class="boxcontent">
@@ -35,10 +41,10 @@
         </a>
     </div>
     <div id="box4" class="boxstyle">
-        <img src="media/noface.png">
+<!--        <img src="media/noface.png">-->
     </div>
     <div id="box3" class="boxstyle">
-        <h2 class="boxcontent"> 'Anything is possible'</h2>
+        <h2 class="boxcontent" id="quote"> 'Anything is possible'</h2>
     </div>
 </div>
 
