Style changes... again, and AGAIN!

--- a/a2/index.html
+++ b/a2/index.html
@@ -11,11 +11,12 @@
 <div id="navbar">
       <ul>
         <li><a href="index.html">HOME</a></li>
-        <li><a href="">CONTENT</a></li>
-        <li><a href="">STORE</a></li>
-        <li id="nav-login"><a href="">LOGIN</a></li>
+        <li><a href="blog.html">CONTENT</a></li>
+        <li><a href="products.html">STORE</a></li>
+        <li id="nav-login" target="_blank"><a href="login.html">LOGIN</a></li>
     </ul>
 </div>
+
 
 
 <div id="heading">
@@ -31,20 +32,23 @@
 -->
 
     <div id="box1" class="boxstyle">
-        <a href="" class="boxcontent">
+        <a href="sign-up.html" class="boxcontent">
         <h2 class="boxcontent">Newsletter Sign-Up</h2>
         </a>
     </div>
     <div id="box2" class="boxstyle ">
-        <a href="" class="boxcontent">
+        <a href="currentarticle.html" class="boxcontent">
         <h2 class="boxcontent">ARTICLE</h2>
         </a>
     </div>
+<!--
     <div id="box4" class="boxstyle">
-<!--        <img src="media/noface.png">-->
+        <img src="media/noface.png">
     </div>
+-->
     <div id="box3" class="boxstyle">
         <h2 class="boxcontent" id="quote"> 'Anything is possible'</h2>
+        <p id="wise-words" >*click me for wise words*</p>
     </div>
 </div>
 
