index.html formattine

--- a/a2/index.html
+++ b/a2/index.html
@@ -10,13 +10,39 @@
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
+    <script src="script.js"></script>
+
+
 
     <title>PIECES by YJ</title>
 </head>
 
 <body>
-    <img src="media/YJLogo(2)%20.png" ;>
-    <img src="media/photography/2.png">
+    <header>
+        <div><a href="index.html"><img src="media/YJLogo(2)%20.png"></a></div>
+    </header>
+
+
+    <div>
+        <ul>
+            <li><a href="collection.html">LATEST COLLECTION</a></li>
+            <li><a href="product.html">STORE</a></li>
+            <li><a href="login.html">LOGIN</a></li>
+        </ul>
+    </div>
+
+
+    <div>
+        <h2>An explorative label of neutrality based in Melbourne, Australia.</h2>
+    </div>
+
+    <div>
+        <h2>Handcrafted Jewles, Belts and Buckles. </h2>
+    </div>
+
+
+
+    <div><img src="media/photography/2.png" height='380'></div>
 </body>
 
 <footer>
