Base product pages HTML adjusted, will nee to add JS for quantity and size, but looking good.

--- a/a2/product.html
+++ b/a2/product.html
@@ -10,9 +10,6 @@
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <script src="script.js"></script>
-
-
 
     <title>PIECES by YJ</title>
 </head>
@@ -25,10 +22,28 @@
 
     <div>
         <ul>
-            <li><a href="collection.html">LATEST COLLECTION</a></li>
+            <li><a href="collection.html">SS'19</a></li>
             <li><a href="product.html">STORE</a></li>
             <li><a href="login.html">LOGIN</a></li>
         </ul>
+    </div>
+
+    <div>
+        <img src="media/product/chain_earrings.png">
+        <h2>PEARL LOOP EARRINGS</h2>
+        <h2>$30.00</h2>
+    </div>
+
+      <div>
+        <img src="media/product/rope_necklace.png">
+        <h2>CHAIN NECKLACE</h2>
+        <h2>$60.00</h2>
+    </div>
+
+      <div>
+        <img src="media/product/buckle_belt.png">
+        <h2>BUCKLE BELT</h2>
+        <h2>$120.00</h2>
     </div>
 
 
