--- a/a2/index.html
+++ b/a2/index.html
@@ -25,7 +25,7 @@
 
     <div>
         <ul>
-            <li><a href="collection.html">LATEST COLLECTION</a></li>
+            <li><a href="lookbook.html">SS'19</a></li>
             <li><a href="product.html">STORE</a></li>
             <li><a href="login.html">LOGIN</a></li>
         </ul>
@@ -42,7 +42,7 @@
 
 
 
-    <div><img src="media/photography/2.png" height='380'></div>
+    <div><img src="media/photography/3.png" height='380'></div>
 </body>
 
 <footer>
