--- a/a2/products_bucklebelt.html
+++ b/a2/products_bucklebelt.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
 
-    <title>PIECES by YJ</title>
+    <title>BUCKLE BELT</title>
 </head>
 
 <body>
@@ -22,29 +22,42 @@
 
     <div>
         <ul>
-            <li><a href="collection.html">SS'19</a></li>
+            <li><a href="lookbook.html">SS'19</a></li>
             <li><a href="product.html">STORE</a></li>
             <li><a href="login.html">LOGIN</a></li>
         </ul>
     </div>
 
     <div>
-        <img src="media/product/chain_earrings.png">
-        <h2><a href="products_pearlloopearrings.html">PEARL LOOP EARRINGS</a></h2>
-        <h2>$30.00</h2>
+        <a href="product.html">&lt BACK TO STORE</a>
     </div>
 
     <div>
-        <img src="media/product/rope_necklace.png">
-        <h2><a href="products_chain_necklace.html">CHAIN NECKLACE</a></h2>
-        <h2>$60.00</h2>
+        <h2>BUCKLE BELT</h2>
     </div>
 
     <div>
         <img src="media/product/buckle_belt.png">
-        <h2><a href="products_bucklebelt.html">BUCKLE BELT</a></h2>
+        <!--NOTE: insert additional images here-->
         <h2>$120.00</h2>
     </div>
+
+    <div>
+        <p>LIMITED EDITION, PIECE FROM THE SS19 ‘NOT-ONLY-ONE’ COLLECTION BUCKLE BELT. ORIGINALLY PRODUCED FOR THE MELBOURNE DESIGNERS MARKET. DETAILS: * GUN-METAL BUCKLE * PIECES by YJ ENGRAVING * ONE-OFF PIECE WORLDWIDE SHIPPING AVAILABLE. PLEASE ALLOW 3-5 WORKING DAYS FOR PROCESSING PRIOR TO SHIPMENT. FOR OUR REFUND &amp; EXCHANGE POLICY PLEASE VISIT OUR TERMS &amp; CONDITIONS PAGE</p>
+    </div>
+
+    <!--    NOTE: JS Dropdownn selectors here and buttons-->
+    <div>
+        <p>QTY</p>
+    </div>
+    <div>
+        <p>SIZE</p>
+    </div>
+
+    <div><button type="button">PURCHASE</button></div>
+
+
+
 
 
 
