--- a/a2/products_pearlloopearrings.html
+++ b/a2/products_pearlloopearrings.html
@@ -11,18 +11,18 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
 
-    <title>PIECES by YJ</title>
+    <title>PEARL LOOP EARRINGS</title>
 </head>
 
 <body>
     <header>
-        <div><a href="index.html"><img src="media/YJLogo(2)%20.png"></a></div>
+        <div><a href="product.html"><img src="media/YJLogo(2)%20.png"></a></div>
     </header>
 
 
     <div>
         <ul>
-            <li><a href="collection.html">SS'19</a></li>
+            <li><a href="lookbook.html">SS'19</a></li>
             <li><a href="product.html">STORE</a></li>
             <li><a href="login.html">LOGIN</a></li>
         </ul>
