Fixed links of products and 'back to store' link after running some testing

--- a/a2/product.html
+++ b/a2/product.html
@@ -36,7 +36,7 @@
 
     <div>
         <img src="media/product/rope_necklace.png">
-        <h2><a href="products_chain_necklace.html">CHAIN NECKLACE</a></h2>
+        <h2><a href="products_chainnecklace.html">CHAIN NECKLACE</a></h2>
         <h2>$60.00</h2>
     </div>
 
