--- a/a2/products_pearlloopearrings.html
+++ b/a2/products_pearlloopearrings.html
@@ -29,7 +29,7 @@
     </div>
 
     <div>
-        <a href="index.html">&lt BACK TO STORE</a>
+        <a href="product.html">&lt BACK TO STORE</a>
     </div>
 
     <div>
@@ -43,7 +43,7 @@
     </div>
 
     <div>
-        <p>LIMITED EDITION, PAIR OF SS19 ‘NOT-ONLY-ONE’ COLLECTION LOOP EARRINGS. ORIGINALLY PRODUCED FOR THE MELBOURNE DESIGNERS MARKET. DETAILS: * GOLD CHAIN DANGLE * PASTEL BEADED ELEMENTS * ONE-OFF PIECE WORLDWIDE SHIPPING AVAILABLE. PLEASE ALLOW 3-5 WORKING DAYS FOR PROCESSING PRIOR TO SHIPMENT. FOR OUR REFUND & EXCHANGE POLICY PLEASE VISIT OUR TERMS & CONDITIONS PAGE</p>
+        <p>LIMITED EDITION, PAIR OF SS19 ‘NOT-ONLY-ONE’ COLLECTION LOOP EARRINGS. ORIGINALLY PRODUCED FOR THE MELBOURNE DESIGNERS MARKET. DETAILS: * GOLD CHAIN DANGLE * PASTEL BEADED ELEMENTS * ONE-OFF PIECE WORLDWIDE SHIPPING AVAILABLE. PLEASE ALLOW 3-5 WORKING DAYS FOR PROCESSING PRIOR TO SHIPMENT. FOR OUR REFUND &amp; EXCHANGE POLICY PLEASE VISIT OUR TERMS &amp; CONDITIONS PAGE</p>
     </div>
 
 <!--    NOTE: JS Dropdownn selectors here and buttons-->
