--- a/a2/products_chainnecklace.html
+++ b/a2/products_chainnecklace.html
@@ -29,7 +29,7 @@
     </div>
 
     <div>
-        <a href="index.html">&lt BACK TO STORE</a>
+        <a href="product.html">&lt BACK TO STORE</a>
     </div>
 
     <div>
