HTML Size radio buttons and select element created to select qty

--- a/a2/products_bucklebelt.html
+++ b/a2/products_bucklebelt.html
@@ -47,11 +47,23 @@
     </div>
 
     <!--    NOTE: JS Dropdownn selectors here and buttons-->
-    <div>
-        <p>QTY</p>
-    </div>
+    <p>QTY</p>
+    <select>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+        </select>
+
     <div>
         <p>SIZE</p>
+        <form action="">
+            <input type="radio" name="size" value="S">S
+            <br>
+            <input type="radio" name="size" value="M"> M
+            <br>
+            <input type="radio" name="size" value="L"> L
+        </form>
     </div>
 
     <div><button type="button">PURCHASE</button></div>
