--- a/a2/products_chainnecklace.html
+++ b/a2/products_chainnecklace.html
@@ -47,9 +47,13 @@
     </div>
 
     <!--    NOTE: JS Dropdownn selectors here and buttons-->
-    <div>
-        <p>QTY</p>
-    </div>
+    <p>QTY</p>
+    <select>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+        </select>
     <div>
         <p>SIZE</p>
     </div>
