--- a/a2/products_pearlloopearrings.html
+++ b/a2/products_pearlloopearrings.html
@@ -46,9 +46,16 @@
         <p>LIMITED EDITION, PAIR OF SS19 ‘NOT-ONLY-ONE’ COLLECTION LOOP EARRINGS. ORIGINALLY PRODUCED FOR THE MELBOURNE DESIGNERS MARKET. DETAILS: * GOLD CHAIN DANGLE * PASTEL BEADED ELEMENTS * ONE-OFF PIECE WORLDWIDE SHIPPING AVAILABLE. PLEASE ALLOW 3-5 WORKING DAYS FOR PROCESSING PRIOR TO SHIPMENT. FOR OUR REFUND &amp; EXCHANGE POLICY PLEASE VISIT OUR TERMS &amp; CONDITIONS PAGE</p>
     </div>
 
-<!--    NOTE: JS Dropdownn selectors here and buttons-->
-    <div><p>QTY</p></div>
-    <div><p>SIZE</p></div>
+    <!--    NOTE: JS Dropdownn selectors here and buttons-->
+    <div>
+        <p>QTY</p>
+        <select>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+        </select>
+    </div>
 
     <div><button type="button">PURCHASE</button></div>
 
