--- a/a2/login.html
+++ b/a2/login.html
@@ -27,8 +27,19 @@
         <ul>
             <li><a href="lookbook.html">SS'19</a></li>
             <li><a href="product.html">STORE</a></li>
-            <li><a href="login.html">LOGIN</a></li>
+            <li><a href="login.php">LOGIN</a></li>
         </ul>
+    </div>
+
+    <div>
+        <form action="/action_page.php">
+            <br>Username:<br>
+            <input type="text" name="username" value="username">
+            <br>Password:<br>
+            <input type="text" name="password" value="password" >
+            <br><br>
+            <input type="submit" value="SIGN IN">
+        </form>
     </div>
 
 
