--- a/a2/index.html
+++ b/a2/index.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <script src="script.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 
 
 
