--- a/a2/products_bucklebelt.html
+++ b/a2/products_bucklebelt.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
+	<script type="text/javascript" src="JS/script.js"></script>
 
 
     <title>BUCKLE BELT</title>
@@ -47,6 +48,7 @@
     </div>
 
     <!--    NOTE: JS Dropdownn selectors here and buttons-->
+    <!--
     <p>QTY</p>
     <select>
             <option value="1">1</option>
@@ -66,8 +68,18 @@
         </form>
     </div>
 
-    <div><button type="button">PURCHASE</button></div>
+    <div><button type="button">PURCHASE</button></div> -->
 
+     <div>
+        <p>QTY</p>
+        <input name="qnt_1" type="text" id="qnt_1" value="0" size="3" data-price="120" onkeyup="CalculateItemsValue()"/><br>
+
+        <br><p>TOTAL</p>
+
+        <div id="ItemsTotal">$0</div><br>
+
+        <input type="submit" value="PURCHASE" formaction="" />
+    </div>
 
 
 
