added 'HOME' link to nav bar

--- a/a2/login.html
+++ b/a2/login.html
@@ -25,6 +25,7 @@
 
     <div>
         <ul>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="lookbook.html">SS'19</a></li>
             <li><a href="product.html">STORE</a></li>
             <li><a href="login.php">LOGIN</a></li>
@@ -36,7 +37,7 @@
             <br>Username:<br>
             <input type="text" name="username" value="username">
             <br>Password:<br>
-            <input type="text" name="password" value="password" >
+            <input type="text" name="password" value="password">
             <br><br>
             <input type="submit" value="SIGN IN">
         </form>
