--- a/a2/products_bucklebelt.html
+++ b/a2/products_bucklebelt.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
-	<script type="text/javascript" src="JS/script.js"></script>
+    <script type="text/javascript" src="JS/script.js"></script>
 
 
     <title>BUCKLE BELT</title>
@@ -23,6 +23,7 @@
 
     <div>
         <ul>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="lookbook.html">SS'19</a></li>
             <li><a href="product.html">STORE</a></li>
             <li><a href="login.html">LOGIN</a></li>
@@ -70,11 +71,12 @@
 
     <div><button type="button">PURCHASE</button></div> -->
 
-     <div>
+    <div>
         <p>QTY</p>
-        <input name="qnt_1" type="text" id="qnt_1" value="0" size="3" data-price="120" onkeyup="CalculateItemsValue()"/><br>
+        <input name="qnt_1" type="text" id="qnt_1" value="0" size="3" data-price="120" onkeyup="CalculateItemsValue()" /><br>
 
-        <br><p>TOTAL</p>
+        <br>
+        <p>TOTAL</p>
 
         <div id="ItemsTotal">$0</div><br>
 
