--- a/a2/lookbook.html
+++ b/a2/lookbook.html
@@ -25,6 +25,7 @@
 
     <div>
         <ul>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="lookbook.html">SS'19</a></li>
             <li><a href="product.html">STORE</a></li>
             <li><a href="login.html">LOGIN</a></li>
@@ -32,9 +33,9 @@
     </div>
 
     <div>
-    <img src="media/photography/S1/1.png">
-    <img src="media/photography/S1/2.png">
-    <img src="media/photography/S1/3.png">
+        <img src="media/photography/S1/1.png">
+        <img src="media/photography/S1/2.png">
+        <img src="media/photography/S1/3.png">
     </div>
 
 
