--- a/a2/products_chainnecklace.html
+++ b/a2/products_chainnecklace.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-	<script type="text/javascript" src="JS/script.js"></script>
+    <script type="text/javascript" src="JS/script.js"></script>
 
 
 
@@ -25,6 +25,7 @@
 
     <div>
         <ul>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="lookbook.html">SS'19</a></li>
             <li><a href="product.html">STORE</a></li>
             <li><a href="login.html">LOGIN</a></li>
@@ -69,9 +70,10 @@
 
     <div>
         <p>QTY</p>
-        <input name="qnt_1" type="text" id="qnt_1" value="0" size="3" data-price="60" onkeyup="CalculateItemsValue()"/><br>
+        <input name="qnt_1" type="text" id="qnt_1" value="0" size="3" data-price="60" onkeyup="CalculateItemsValue()" /><br>
 
-        <br><p>TOTAL</p>
+        <br>
+        <p>TOTAL</p>
 
         <div id="ItemsTotal">$0</div><br>
 
