--- a/a2/products_pearlloopearrings.html
+++ b/a2/products_pearlloopearrings.html
@@ -24,6 +24,7 @@
 
     <div>
         <ul>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="lookbook.html">SS'19</a></li>
             <li><a href="product.html">STORE</a></li>
             <li><a href="login.html">LOGIN</a></li>
