CSS for logo and desktop styling locked and loaded

--- a/a2/index.html
+++ b/a2/index.html
@@ -17,10 +17,15 @@
     <title>PIECES by YJ</title>
 </head>
 
-<body>
+<body id="index_body">
     <header>
-        <div><a href="index.html"><img src="media/YJLogo(2)%20.png"></a></div>
-    </header>
+        <div class="logo">
+            <a href="index.html">
+            <img src="media/Logo.png" class="desktop"/>
+            <img src="media/Logo.png" class="mobile"/>
+            </a>
+        </div>
+    </header><br>
 
 
     <div>
