Positioned Nav Bar

--- a/a2/index.html
+++ b/a2/index.html
@@ -8,6 +8,8 @@
     <meta name="author" content="John Doe">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <script type="text/javascript" src="script.js"></script>
@@ -19,7 +21,7 @@
 
 <body id="index_body">
     <header>
-        <div class="logo">
+        <div class="logo" id="inner">
             <a href="index.html">
             <img src="media/Logo.png" class="desktop"/>
             <img src="media/Logo.png" class="mobile"/>
@@ -28,14 +30,14 @@
     </header><br>
 
 
-    <div>
+    <div class="nav_bar">
         <ul>
             <li><a href="index.html">HOME</a></li>
             <li><a href="lookbook.html">SS'19</a></li>
             <li><a href="product.html">STORE</a></li>
             <li><a href="login.html">LOGIN</a></li>
         </ul>
-    </div>
+    </div><br>
 
 
     <div>
