Styling for navbar completed...for not

--- a/a2/index.html
+++ b/a2/index.html
@@ -27,14 +27,15 @@
             <img src="media/Logo.png" class="mobile"/>
             </a>
         </div>
-    </header><br>
+    </header>
+
 
 
     <div class="nav_bar">
         <ul>
             <li><a href="index.html">HOME</a></li>
-            <li><a href="lookbook.html">SS'19</a></li>
             <li><a href="product.html">STORE</a></li>
+            <li><a href="lookbook.html">SS'19</a></li>
             <li><a href="login.html">LOGIN</a></li>
         </ul>
     </div><br>
