Margin and Padding Set for Logo, Nav Bar, H2 and IMG elements

--- a/a2/index.html
+++ b/a2/index.html
@@ -41,17 +41,17 @@
     </div><br>
 
 
-    <div>
+    <div id="blurb">
         <h2>An explorative label of neutrality based in Melbourne, Australia.</h2>
     </div>
 
-    <div>
+    <div id="handcrafted">
         <h2>Handcrafted Jewles, Belts and Buckles. </h2>
     </div>
 
 
 
-    <div><img src="media/photography/3.png" height='380'></div>
+    <div class="box1"><img src="media/photography/bodyimg.png" id="mainimg"></div>
 </body>
 
 <footer>
