nav bar and logo updated on all pages

--- a/a2/login.html
+++ b/a2/login.html
@@ -19,18 +19,23 @@
 
 <body>
     <header>
-        <div><a href="index.html"><img src="media/YJLogo(2)%20.png"></a></div>
+        <div class="logo" id="inner">
+            <a href="index.html">
+            <img src="media/Logo.png" class="desktop"/>
+            <img src="media/Logo.png" class="mobile"/>
+            </a>
+        </div>
     </header>
 
 
-    <div>
+     <div class="nav_bar">
         <ul>
             <li><a href="index.html">HOME</a></li>
-            <li><a href="lookbook.html">SS'19</a></li>
             <li><a href="product.html">STORE</a></li>
-            <li><a href="login.php">LOGIN</a></li>
-        </ul>
-    </div>
+            <li><a href="lookbook.html">SS'19</a></li>
+            <li><a href="login.html">LOGIN</a></li>
+        </ul><br>
+    </div><br>
 
     <!--
     <div>
@@ -45,7 +50,7 @@
     </div>
 -->
 
-<!--
+    <!--
     <div>
         <label>Email</label><br>
         <input type="email" name="customer[email]" id="CustomerEmail" autocorrect="off" autocapitalize="off" autofocus="">
