--- a/a2/lookbook.html
+++ b/a2/lookbook.html
@@ -19,18 +19,23 @@
 
 <body>
     <header>
-        <div><a href="index.html"><img src="media/YJLogo(2)%20.png"></a></div>
+        <div class="logo" id="inner">
+            <a href="index.html">
+            <img src="media/Logo.png" class="desktop"/>
+            <img src="media/Logo.png" class="mobile"/>
+            </a>
+        </div>
     </header>
 
 
-    <div>
+     <div class="nav_bar">
         <ul>
             <li><a href="index.html">HOME</a></li>
-            <li><a href="lookbook.html">SS'19</a></li>
             <li><a href="product.html">STORE</a></li>
+            <li><a href="lookbook.html">SS'19</a></li>
             <li><a href="login.html">LOGIN</a></li>
         </ul>
-    </div>
+    </div><br>
 
     <div>
         <img src="media/photography/S1/1.png">
