--- a/a2/products_bucklebelt.html
+++ b/a2/products_bucklebelt.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
+
     <script type="text/javascript" src="JS/script.js"></script>
 
 
@@ -17,18 +18,23 @@
 
 <body>
     <header>
-        <div><a href="index.html"><img src="media/YJLogo(2)%20.png"></a></div>
+        <div class="logo" id="inner">
+            <a href="index.html">
+            <img src="media/Logo.png" class="desktop"/>
+            <img src="media/Logo.png" class="mobile"/>
+            </a>
+        </div>
     </header>
 
 
-    <div>
+    <div class="nav_bar">
         <ul>
             <li><a href="index.html">HOME</a></li>
-            <li><a href="lookbook.html">SS'19</a></li>
             <li><a href="product.html">STORE</a></li>
+            <li><a href="lookbook.html">SS'19</a></li>
             <li><a href="login.html">LOGIN</a></li>
         </ul>
-    </div>
+    </div><br>
 
     <div>
         <a href="product.html">&lt BACK TO STORE</a>
