centered product page images

--- a/a2/product.html
+++ b/a2/product.html
@@ -26,7 +26,7 @@
 
 
     <div class="nav_bar">
-        <ul>
+        <ul class="navbarlinks">
             <li><a href="index.html">HOME</a></li>
             <li><a href="product.html">STORE</a></li>
             <li><a href="lookbook.html">SS'19</a></li>
@@ -34,22 +34,24 @@
         </ul>
     </div><br>
 
-    <div>
-        <img src="media/product/chain_earrings.png">
-        <h2><a href="products_pearlloopearrings.html">PEARL LOOP EARRINGS</a></h2>
-        <h2>$30.00</h2>
-    </div>
+    <div id="productbox1">
+        <div >
+            <img src="media/product/chain_earrings.png" class="storeimages">
+            <h2><a href="products_pearlloopearrings.html">PEARL LOOP EARRINGS</a></h2>
+            <h2>$30.00</h2>
+        </div>
 
-    <div>
-        <img src="media/product/rope_necklace.png">
-        <h2><a href="products_chainnecklace.html">CHAIN NECKLACE</a></h2>
-        <h2>$60.00</h2>
-    </div>
+        <div>
+            <img src="media/product/rope_necklace.png" class="storeimages">
+            <h2><a href="products_chainnecklace.html">CHAIN NECKLACE</a></h2>
+            <h2>$60.00</h2>
+        </div>
 
-    <div>
-        <img src="media/product/buckle_belt.png">
-        <h2><a href="products_bucklebelt.html">BUCKLE BELT</a></h2>
-        <h2>$120.00</h2>
+        <div>
+            <img src="media/product/buckle_belt.png" class="storeimages">
+            <h2><a href="products_bucklebelt.html">BUCKLE BELT</a></h2>
+            <h2>$120.00</h2>
+        </div>
     </div>
 
 
