Adjusted Lookbook images and edited h2 selectors to center oroduct text

--- a/a2/product.html
+++ b/a2/product.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="productheader">
         <div class="logo" id="inner">
             <a href="index.html">
             <img src="media/Logo.png" class="desktop"/>
