--- a/a2/lookbook.html
+++ b/a2/lookbook.html
@@ -37,7 +37,7 @@
         </ul>
     </div><br>
 
-    <div>
+    <div id="lbimages">
         <img src="media/photography/S1/1.png">
         <img src="media/photography/S1/2.png">
         <img src="media/photography/S1/3.png">
