--- a/a2/login.html
+++ b/a2/login.html
@@ -17,7 +17,7 @@
     <title>LOGIN</title>
 </head>
 
-<body>
+<body id="login_body">
     <header>
         <div class="logo" id="inner">
             <a href="index.html">
@@ -82,7 +82,7 @@
 
         <div>
             <input type="submit" class="button" value="Sign In">
-        </div>
+        </div><br>
 
         <a href="" id="recover-password-link" class="secondary-form-button">Forgotten your password?</a>
     </form>
