yadayada 'back to stor' link uniform accross product pages

--- a/a2/login.html
+++ b/a2/login.html
@@ -65,7 +65,7 @@
         <input type="submit" class="button" value="Sign In">
     </div>
 -->
-
+    <div class="loginformbox">
     <form method="post" action="" id="customer_login" accept-charset="UTF-8">
         <input type="hidden" name="form_type" value="customer_login">
         <input type="hidden" name="utf8" value="✓">
