--- a/a2/lookbook.html
+++ b/a2/lookbook.html
@@ -17,7 +17,7 @@
     <title>PIECES by YJ</title>
 </head>
 
-<body>
+<body id="lookbook_body">
     <header>
         <div class="logo" id="inner">
             <a href="index.html">
@@ -37,7 +37,7 @@
         </ul>
     </div><br>
 
-    <div id="lbimages">
+    <div class="lbimages">
         <img src="media/photography/S1/1.png">
         <img src="media/photography/S1/2.png">
         <img src="media/photography/S1/3.png">
