--- a/a2/products_chainnecklace.html
+++ b/a2/products_chainnecklace.html
@@ -37,7 +37,7 @@
         </ul>
     </div><br>
 
-    <div>
+    <div id="backtostore">
         <a href="product.html">&lt BACK TO STORE</a>
     </div>
 
@@ -46,7 +46,7 @@
     </div>
 
     <div>
-        <img src="media/product/rope_necklace.png">
+        <img src="media/product/rope_necklace.png" id="singleitemimg">
         <!--NOTE: insert additional images here-->
         <h2>$60.00</h2>
     </div>
