--- a/a2/products_pearlloopearrings.html
+++ b/a2/products_pearlloopearrings.html
@@ -36,7 +36,7 @@
         </ul>
     </div><br>
 
-    <div>
+    <div id="backtostore">
         <a href="product.html">&lt BACK TO STORE</a>
     </div>
 
@@ -45,7 +45,7 @@
     </div>
 
     <div>
-        <img src="media/product/chain_earrings.png">
+        <img src="media/product/chain_earrings.png" id="singleitemimg">
         <!--NOTE: insert additional images here-->
         <h2>$30.00</h2>
     </div>
